--- a/Front-end/src/pages/cracha/Cracha.css
+++ b/Front-end/src/pages/cracha/Cracha.css
@@ -42,3 +42,13 @@ body{
     text-align: center;
     color:  rgb(52, 152, 219);
 }
+
+.botaoAlterar{
+    padding: .5rem;              
+    background-color: rgb(52,152,219); 
+    color: #fff;                
+    border: none;               
+    border-radius: 8px;         
+    cursor: pointer;             
+    margin-top: .5rem;
+}
